Update redis-lettuce/src/main/java/io/micronaut/configuration/lettuce/RedisConfigurationWithUriSettings.java